2010-03-05  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=33247
        Backwards cursor movement incorrect when previous block ends with <br>.

        If the cursor is trying to move into a node that has a height of 0,
        skip over it.

        * editing/execCommand/move-selection-back-line-expected.txt: Added.
        * editing/execCommand/move-selection-back-line.html: Added.
2010-03-05  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=33247
        Backwards cursor movement incorrect when previous block ends with <br>.

        If the cursor is trying to move into a node that has a height of 0,
        skip over it.

        Test: editing/execCommand/move-selection-back-line.html

        * editing/visible_units.cpp:
        (WebCore::previousLinePosition):

Canonical link: https://commits.webkit.org/46910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55613 268f45cc-cd09-0410-ab3c-d52691b4dbfc